feat (LoadYamlGeneratorService): extend customization with const and step testing, also add setting load_type